test/files/neg/plugin-rafter-before-1/lib/plugins.jar.desired.sha1
398fa866d1d5c6608c9607dd1079afc12182119f ?plugins.jar
